refactoring app container

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,8 +2,11 @@
 <html>
 
 <head>
+	<meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 	<meta charset="utf-8">
-	<title>Awesome News! </title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<title>Awesome News!</title>
 </head>
 
 <body>
